# striver-solutions-a-z

./: bisection.c  linkedlist.c  matrix.cpp  newton.c  pattern.cpp  sorting.c  string.cpp
ChessProject/: CMakeLists.txt  style.qss
ChessProject/include/: chessboard.h  constants.h
ChessProject/src/: chessboard.cpp  main.cpp
LoginProject/: CMakeLists.txt
LoginProject/include/: database.h  encryption.h  login.h  mainwindow.h
LoginProject/src/: database.cpp  encryption.cpp  login.cpp  main.cpp  mainwindow.cpp
c programs/: doublylinkedlist.c
c++ program/: constructor_overloading.cpp
c++program/: chess.cpp  matrix.cpp  minimumjumps.cpp  pattern.cpp  sqrfunction.cpp  string.cpp  sumofdivisor.cpp  time.cpp
cprograms/: bisection.c  doublylinkedlist.c  libary.c  secand.c  trapazoidal.c
